--- a/views/index.html
+++ b/views/index.html
@@ -107,7 +107,7 @@
       </a>
       <a href="/show-expense">
         <div>
-          <h2>ShowExpense</h2>
+          <h2>Show Appointments</h2>
         </div>
       </a>
     </header>
